# Luminary

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: health.py
backend/app/core/: config.py
backend/app/models/: README.md
backend/app/prompts/: README.md
backend/app/services/: README.md
backend/db/init/: 01_enable_pgvector.sql
backend/tests/: conftest.py  test_health.py
docs/: 01_Product_Definition_Document.docx  02_Technical_Design_Document.docx  03_Project_Plan.docx
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/lib/: api.ts
