[project]
name = "luminary-backend"
version = "0.1.0"
description = "Luminary backend — FastAPI service for AI-powered cross-media recommendations."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Matheesha Peruma" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "anthropic>=0.39",          # primary LLM provider
    "openai>=1.54",             # fallback LLM provider
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "pip-audit>=2.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ---------- tooling ----------

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]   # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]
